[gd_scene load_steps=2 format=3 uid="uid://dkdw5cvw365y7"]

[ext_resource type="Script" path="res://Scenes/Character/hit_box.gd" id="1_uibn4"]

[node name="HitBox" type="Area2D"]
script = ExtResource("1_uibn4")

[node name="HitTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="add_to_list"]
[connection signal="body_exited" from="." to="." method="remove_to_list"]
